--- a/relinksys/api/views/optometristPDF.ejs
+++ b/relinksys/api/views/optometristPDF.ejs
@@ -151,8 +151,8 @@
         </table>
         <table style="width: 25%; float: right; text-align: left;">
             <tr>
-                <th style="width: 35%;"> Age</th>
-                <td>: <%= data.customerdetails.Age %></td>
+                <th style="width: 35%;"> VisitDate</th>
+                <td>: <%= data.customerdetails.VisitDate %></td>
             </tr>
             <tr>
                 <th style="width: 35%;">Gender</th>
