--- a/relinksys/web/src/app/report/transfer-product-report/transfer-product-report.component.html
+++ b/relinksys/web/src/app/report/transfer-product-report/transfer-product-report.component.html
@@ -92,7 +92,7 @@
                                         <mat-form-field class="example-full-width mb-0 paddingInp">
                                             <mat-label>Select Product</mat-label>
                                             <mat-select name="ProductCategory" [(ngModel)]="data.ProductCategory"
-                                                (selectionChange)="getFieldList()" required #Typecontrol>
+                                                (selectionChange)="getFieldList()"  #Typecontrol>
                                                 <mat-option>
                                                     <ngx-mat-select-search matInput [(ngModel)]="searchValue" (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}">
                                                     </ngx-mat-select-search>
@@ -117,7 +117,7 @@
                                                 <mat-select name="{{spec.FieldName+'0'}}"
                                                     [(ngModel)]="spec.SelectedValue"
                                                     (selectionChange)="getFieldSupportData(i)" editable="true"
-                                                    [required]="spec.Required === 1" #singleSelect>
+                                                     #singleSelect>
                                                     <mat-option>
                                                         <ngx-mat-select-search matInput [(ngModel)]="spec.EnteredValue" (ngModelChange)="spec.EnteredValue = onChange($event)" [ngModelOptions]="{standalone: true}">
                                                         </ngx-mat-select-search>
@@ -138,7 +138,7 @@
                                             <mat-form-field class=" mr-0 mb-0">
                                                 <mat-label>{{spec.FieldName}}</mat-label>
                                                 <input matInput name="{{spec.FieldName+'2'}}"
-                                                    [(ngModel)]="spec.SelectedValue" [required]="spec.Required === 1"
+                                                    [(ngModel)]="spec.SelectedValue" 
                                                     (blur)="getFieldSupportData(i)">
                                                 <mat-error>
                                                     {{spec.FieldName}} is Required
@@ -150,7 +150,7 @@
                                                 <mat-label>{{spec.FieldName}}</mat-label>
                                                 <input type="date" matInput name="{{spec.FieldName+'3'}}"
                                                     [(ngModel)]="spec.SelectedValue" editable="true"
-                                                    [required]="spec.Required === 1">
+                                                    >
                                                 <mat-error>
                                                     {{spec.FieldName}} is Required
                                                 </mat-error>
