--- a/relinksys/web/src/app/report/customer-return/customer-return.component.html
+++ b/relinksys/web/src/app/report/customer-return/customer-return.component.html
@@ -276,7 +276,7 @@
                                                     <mat-label>Select Product</mat-label>
                                                     <mat-select name="FieldType"
                                                         [(ngModel)]="Billdetail.ProductCategory"
-                                                        (selectionChange)="getFieldList()" required #Typecontrol>
+                                                        (selectionChange)="getFieldList()"  #Typecontrol>
                                                         <mat-option>
                                                             <ngx-mat-select-search matInput [(ngModel)]="searchValue"
                                                                 (ngModelChange)="searchValue = onChange($event)"
@@ -304,7 +304,7 @@
                                                         <mat-select name="{{spec.FieldName+'0'}}"
                                                             [(ngModel)]="spec.SelectedValue"
                                                             (selectionChange)="getFieldSupportData(i)" editable="true"
-                                                            [required]="spec.Required === 1" #singleSelect>
+                                                             #singleSelect>
                                                             <mat-option>
                                                                 <ngx-mat-select-search matInput
                                                                     [(ngModel)]="spec.EnteredValue"
@@ -330,7 +330,7 @@
                                                         <mat-label>{{spec.FieldName}}</mat-label>
                                                         <input matInput name="{{spec.FieldName+'2'}}"
                                                             [(ngModel)]="spec.SelectedValue"
-                                                            [required]="spec.Required === 1"
+                                                            
                                                             (blur)="getFieldSupportData(i)">
                                                         <mat-error>
                                                             {{spec.FieldName}} is Required
@@ -342,7 +342,7 @@
                                                         <mat-label>{{spec.FieldName}}</mat-label>
                                                         <input type="date" matInput name="{{spec.FieldName+'3'}}"
                                                             [(ngModel)]="spec.SelectedValue" editable="true"
-                                                            [required]="spec.Required === 1">
+                                                            >
                                                         <mat-error>
                                                             {{spec.FieldName}} is Required
                                                         </mat-error>
