--- a/relinksys/web/src/app/report/inventory-report/inventory-report.component.html
+++ b/relinksys/web/src/app/report/inventory-report/inventory-report.component.html
@@ -162,7 +162,7 @@
                         <mat-form-field class="example-full-width mb-0">
                           <mat-label>Select Product</mat-label>
                           <mat-select name="FieldType" [(ngModel)]="inventory.ProductCategory"
-                            (selectionChange)="getFieldList()" required #Typecontrol>
+                            (selectionChange)="getFieldList()"  #Typecontrol>
                             <mat-option>
                               <ngx-mat-select-search matInput [(ngModel)]="searchValue"
                                 (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}">
@@ -186,7 +186,7 @@
                             <mat-label>{{spec.FieldName}}</mat-label>
                             <mat-select name="{{spec.FieldName+'0'}}" [(ngModel)]="spec.SelectedValue"
                               (selectionChange)="getFieldSupportData(i)" editable="true"
-                              [required]="spec.Required === 1" #singleSelect>
+                               #singleSelect>
                               <mat-option>
                                 <ngx-mat-select-search matInput [(ngModel)]="spec.EnteredValue"
                                   (ngModelChange)="spec.EnteredValue = onChange($event)"
@@ -209,7 +209,7 @@
                           <mat-form-field class=" mr-0 mb-0">
                             <mat-label>{{spec.FieldName}}</mat-label>
                             <input matInput name="{{spec.FieldName+'2'}}" [(ngModel)]="spec.SelectedValue"
-                              [required]="spec.Required === 1" (blur)="getFieldSupportData(i)">
+                               (blur)="getFieldSupportData(i)">
                             <mat-error>
                               {{spec.FieldName}} is Required
                             </mat-error>
@@ -219,7 +219,7 @@
                           <mat-form-field class=" mr-0 mb-0">
                             <mat-label>{{spec.FieldName}}</mat-label>
                             <input type="date" matInput name="{{spec.FieldName+'3'}}" [(ngModel)]="spec.SelectedValue"
-                              editable="true" [required]="spec.Required === 1">
+                              editable="true" >
                             <mat-error>
                               {{spec.FieldName}} is Required
                             </mat-error>
@@ -995,7 +995,7 @@
                         <mat-form-field class="example-full-width mb-0">
                           <mat-label>Select Product</mat-label>
                           <mat-select name="FieldType" [(ngModel)]="ProductExpiry.ProductCategory"
-                            (selectionChange)="getFieldList1()" required #Typecontrol>
+                            (selectionChange)="getFieldList1()"  #Typecontrol>
                             <mat-option>
                               <ngx-mat-select-search matInput [(ngModel)]="searchValue"
                                 (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}">
@@ -1020,7 +1020,7 @@
                             <mat-label>{{spec.FieldName}}</mat-label>
                             <mat-select name="{{spec.FieldName+'0'}}" [(ngModel)]="spec.SelectedValue"
                               (selectionChange)="getFieldSupportData1(i)" editable="true"
-                              [required]="spec.Required === 1" #singleSelect>
+                               #singleSelect>
                               <mat-option>
                                 <ngx-mat-select-search matInput [(ngModel)]="spec.EnteredValue"
                                   (ngModelChange)="spec.EnteredValue = onChange($event)"
@@ -1043,7 +1043,7 @@
                           <mat-form-field class=" mr-0 mb-0">
                             <mat-label>{{spec.FieldName}}</mat-label>
                             <input matInput name="{{spec.FieldName+'2'}}" [(ngModel)]="spec.SelectedValue"
-                              [required]="spec.Required === 1" (blur)="getFieldSupportData1(i)">
+                               (blur)="getFieldSupportData1(i)">
                             <mat-error>
                               {{spec.FieldName}} is Required
                             </mat-error>
@@ -1053,7 +1053,7 @@
                           <mat-form-field class=" mr-0 mb-0">
                             <mat-label>{{spec.FieldName}}</mat-label>
                             <input type="date" matInput name="{{spec.FieldName+'3'}}" [(ngModel)]="spec.SelectedValue"
-                              editable="true" [required]="spec.Required === 1">
+                              editable="true" >
                             <mat-error>
                               {{spec.FieldName}} is Required
                             </mat-error>
@@ -1786,7 +1786,7 @@
                                   <mat-select name="{{spec.FieldName+'0'}}"
                                       [(ngModel)]="spec.SelectedValue"
                                       (selectionChange)="getFieldSupportData(i)" editable="true"
-                                      [required]="spec.Required === 1" #singleSelect>
+                                       #singleSelect>
                                       <mat-option>
                                           <ngx-mat-select-search matInput [(ngModel)]="spec.EnteredValue" (ngModelChange)="spec.EnteredValue = onChange($event)" [ngModelOptions]="{standalone: true}">
                                           </ngx-mat-select-search>
@@ -1807,7 +1807,7 @@
                               <mat-form-field class=" mr-0 mb-0">
                                   <mat-label>{{spec.FieldName}}</mat-label>
                                   <input matInput name="{{spec.FieldName+'2'}}"
-                                      [(ngModel)]="spec.SelectedValue" [required]="spec.Required === 1"
+                                      [(ngModel)]="spec.SelectedValue" 
                                       (blur)="getFieldSupportData(i)">
                                   <mat-error>
                                       {{spec.FieldName}} is Required
@@ -1819,7 +1819,7 @@
                                   <mat-label>{{spec.FieldName}}</mat-label>
                                   <input type="date" matInput name="{{spec.FieldName+'3'}}"
                                       [(ngModel)]="spec.SelectedValue" editable="true"
-                                      [required]="spec.Required === 1">
+                                      >
                                   <mat-error>
                                       {{spec.FieldName}} is Required
                                   </mat-error>
