--- a/relinksys/web/src/app/report/product-return/product-return.component.html
+++ b/relinksys/web/src/app/report/product-return/product-return.component.html
@@ -295,7 +295,7 @@
                           <mat-form-field class="example-full-width mb-0">
                             <mat-label>Select Product</mat-label>
                             <mat-select name="FieldType" [(ngModel)]="ReturnDetail.ProductCategory"
-                              (selectionChange)="getFieldList()" required #Typecontrol>
+                              (selectionChange)="getFieldList()"  #Typecontrol>
                               <mat-option>
                                 <ngx-mat-select-search matInput [(ngModel)]="searchValue" (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}">
                                 </ngx-mat-select-search>
@@ -318,7 +318,7 @@
                               <mat-label>{{spec.FieldName}}</mat-label>
                               <mat-select name="{{spec.FieldName+'0'}}" [(ngModel)]="spec.SelectedValue"
                                 (selectionChange)="getFieldSupportData(i)" editable="true"
-                                [required]="spec.Required === 1" #singleSelect>
+                                 #singleSelect>
                                 <mat-option>
                                   <ngx-mat-select-search matInput [(ngModel)]="spec.EnteredValue" (ngModelChange)="spec.EnteredValue = onChange($event)" [ngModelOptions]="{standalone: true}">
                                   </ngx-mat-select-search>
@@ -338,7 +338,7 @@
                             <mat-form-field class=" mr-0 mb-0">
                               <mat-label>{{spec.FieldName}}</mat-label>
                               <input matInput name="{{spec.FieldName+'2'}}" [(ngModel)]="spec.SelectedValue"
-                                [required]="spec.Required === 1" (blur)="getFieldSupportData(i)">
+                                 (blur)="getFieldSupportData(i)">
                               <mat-error>
                                 {{spec.FieldName}} is Required
                               </mat-error>
@@ -348,7 +348,7 @@
                             <mat-form-field class=" mr-0 mb-0">
                               <mat-label>{{spec.FieldName}}</mat-label>
                               <input type="date" matInput name="{{spec.FieldName+'3'}}" [(ngModel)]="spec.SelectedValue"
-                                editable="true" [required]="spec.Required === 1">
+                                editable="true" >
                               <mat-error>
                                 {{spec.FieldName}} is Required
                               </mat-error>
